src/codegen/tests/snapshots/rusty__codegen__tests__codegen_error_messages_tests__invalid_array_access_in_struct_should_be_reported_with_line_number.snap
---
source: src/codegen/tests/codegen_error_messages_tests.rs
expression: msg
---
error[E071]: Invalid array access
   ┌─ <internal>:13:24
   │
13 │             x.a := x.b[3];
   │                        ^ Invalid array access


